# PublicSamples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  public_samples.sln
3DoorTest/: 3DoorTest.cpp  3DoorTest.vcxproj  3DoorTest.vcxproj.filters  CMakeLists.txt  README.md
AarnioSequence/: AarnioSequence.cpp  AarnioSequence.vcxproj  AarnioSequence.vcxproj.filters  CMakeLists.txt  README.md
AdventOfCode24/: .gitignore  AdventOfCode24.sln  AdventOfCode24.vcxproj  CMakeLists.txt  README.md
AdventOfCode24/Day1/: CMakeLists.txt  Day1.cpp  Day1.vcxproj  LocationIDs.csv  LocationIDs_calculated.xlsx
AdventOfCode24/Day10/: CMakeLists.txt  Day10.cpp  Day10.vcxproj  Day10.vcxproj.filters
AdventOfCode24/Day11/: CMakeLists.txt  Day11.cpp  Day11.vcxproj
AdventOfCode24/Day12/: CMakeLists.txt  Day12.cpp  Day12.vcxproj
AdventOfCode24/Day13/: CMakeLists.txt  Day13.cpp  Day13.vcxproj  Day13.vcxproj.filters
AdventOfCode24/Day14/: CMakeLists.txt  Day14.cpp  Day14.vcxproj  Day14.vcxproj.filters
AdventOfCode24/Day15/: CMakeLists.txt  Day15.cpp  Day15.vcxproj  Map.txt  Moves.txt
AdventOfCode24/Day16/: CMakeLists.txt  Day16.cpp  Day16.vcxproj  Day16.vcxproj.filters
AdventOfCode24/Day17/: Asm.txt  CMakeLists.txt  Day17.cpp  Day17.vcxproj  Day17.vcxproj.filters  Registers.txt
AdventOfCode24/Day18/: CMakeLists.txt  Day18.cpp  Day18.vcxproj  Day18.vcxproj.filters
AdventOfCode24/Day19/: CMakeLists.txt  Day19.cpp  Day19.vcxproj  Day19.vcxproj.filters  Towels.txt
AdventOfCode24/Day2/: CMakeLists.txt  Day2.cpp  Day2.vcxproj  Day2.vcxproj.filters
AdventOfCode24/Day20/: CMakeLists.txt  Day20.cpp  Day20.vcxproj
AdventOfCode24/Day21/: CMakeLists.txt  Day21.cpp  Day21.vcxproj
AdventOfCode24/Day22/: CMakeLists.txt  Day22.cpp  Day22.vcxproj  Day22.vcxproj.filters
AdventOfCode24/Day23/: CMakeLists.txt  Day23.cpp  Day23.vcxproj  Day23.vcxproj.filters
AdventOfCode24/Day24/: CMakeLists.txt  Day24.cpp  Day24.vcxproj  Day24.vcxproj.filters
AdventOfCode24/Day25/: CMakeLists.txt  Day25.cpp  Day25.vcxproj  Day25.vcxproj.filters
AdventOfCode24/Day3/: CMakeLists.txt  Day3.cpp  Day3.vcxproj  Day3.vcxproj.filters
AdventOfCode24/Day4/: CMakeLists.txt  Day4.cpp  Day4.vcxproj  Day4.vcxproj.filters
AdventOfCode24/Day5/: CMakeLists.txt  Day5.cpp  Day5.vcxproj  Day5.vcxproj.filters
AdventOfCode24/Day6/: CMakeLists.txt  Day6.cpp  Day6.vcxproj  Day6.vcxproj.filters
AdventOfCode24/Day7/: CMakeLists.txt  Day7.cpp  Day7.vcxproj  Day7.vcxproj.filters
AdventOfCode24/Day8/: CMakeLists.txt  Day8.cpp  Day8.vcxproj  Day8.vcxproj.filters
AdventOfCode24/Day9/: CMakeLists.txt  Day9.cpp  Day9.vcxproj
AdventOfCode25/: .gitignore  AdventOfCode25.sln  CMakeLists.txt  README.md
AdventOfCode25/Day01/: CMakeLists.txt  Day01.cpp  Day01.vcxproj  Day01.vcxproj.filters
AdventOfCode25/Day02/: CMakeLists.txt  Day02.cpp  Day02.vcxproj  Day02.vcxproj.filters  range.h
AdventOfCode25/Day03/: CMakeLists.txt  Day03.cpp  Day03.vcxproj  Day03.vcxproj.filters  bank.h
AdventOfCode25/Day04/: CMakeLists.txt  Day04.cpp  Day04.vcxproj  Day04.vcxproj.filters  directions.h  puzzle_map.h
AdventOfCode25/Day05/: CMakeLists.txt  Day05.cpp  Day05.vcxproj  Day05.vcxproj.filters
AdventOfCode25/Day06/: CMakeLists.txt  Day06.cpp  Day06.vcxproj  Day06.vcxproj.filters
AdventOfCode25/Day07/: CMakeLists.txt  Day07.cpp  Day07.vcxproj  Day07.vcxproj.filters
AdventOfCode25/Day08/: CMakeLists.txt  Day08.cpp  Day08.vcxproj  Day08.vcxproj.filters  circuit.hpp  jbox.hpp
AdventOfCode25/Day09/: CMakeLists.txt  Day09.cpp  Day09.vcxproj  Day09.vcxproj.filters  vec2.hpp
AdventOfCode25/Day10/: CMakeLists.txt  Day10.cpp  Day10.vcxproj  Day10.vcxproj.filters  combinationanator.hpp  machine.hpp
AdventOfCode25/Day11/: CMakeLists.txt  Day11.cpp  Day11.vcxproj  Day11.vcxproj.filters
AdventOfCode25/Day12/: CMakeLists.txt  Day12.cpp  Day12.vcxproj  Day12.vcxproj.filters  layout.hpp  shape.hpp
CUDASample/: CMakeLists.txt  cudasample.cu
D3D12PerlinTriangle/: CMakeLists.txt  D3D12PerlinTriangle.cpp  D3D12PerlinTriangle.h  D3D12PerlinTriangle.vcxproj  D3D12PerlinTriangle.vcxproj.filters  DX12PerlinTriangle_old.cpp  DXSample.cpp  DXSample.h  Main.cpp  README.md  shaders.hlsl  stdafx.cpp  stdafx.h
DiamondPrinter/: CMakeLists.txt  DiamondPrinter.cpp  DiamondPrinter.vcxproj  DiamondPrinter.vcxproj.filters  README.md
FakeGuard/: CMakeLists.txt  FakeGuard.cpp  FakeGuard.rc  FakeGuard.vcxproj  FakeGuard.vcxproj.filters  README.md  resource.h
FastSphereCollision/: CMakeLists.txt  FastSphereCollision.cpp  FastSphereCollision.vcxproj  FastSphereCollision.vcxproj.filters  README.md
InterviewProblems/: CMakeLists.txt  CountPairs.cpp  HistogramArea.c  InterviewProblems.c  SortLists.c
MemberHiding/: CMakeLists.txt  MemberHiding.cpp  MemberHiding.vcxproj  MemberHiding.vcxproj.filters
MostSignificantBit/: CMakeLists.txt  MostSignificantBit.cpp  MostSignificantBit.vcxproj  MostSignificantBit.vcxproj.filters  README.md
StlTypeTest/: CMakeLists.txt  README.md  StlTypeTest.cpp  StlTypeTest.vcxproj  StlTypeTest.vcxproj.filters
SudokuSolver/: CMakeLists.txt  README.md  SudokuSolver.cpp  SudokuSolver.vcxproj  SudokuSolver.vcxproj.filters  block.hpp  cell.hpp  debug.h  grid.hpp  sudoku_types.h  test1_pointing_pair.txt  test2_naked_pair.txt  test3_hidden_pair.txt
TemplateMetaProgramming/: CMakeLists.txt  README.md  TemplateMetaProgramming.cpp  TemplateMetaProgramming.vcxproj  TemplateMetaProgramming.vcxproj.filters
TextAdventure/: Character.cpp  Character.h  Characters.json  Events.json  Game.cpp  Game.h  GameObject.h  InGameEvents.cpp  InGameEvents.h  InGameObject.cpp  InGameObject.h  Inventory.h  Item.cpp  Item.h  Items.json  Location.cpp  Location.h  Locations.json  Map.cpp  Map.h  Objects.h  Parser.cpp  Parser.h  ResourceLoader.hpp  SimpleParser.cpp  SimpleParser.h  StringCompare.cpp  StringCompareNoCase.hpp  TextAdventure.cpp  TextAdventure.rc  TextAdventure.vcxproj  TextAdventure.vcxproj.filters  Verbs.json  resource.h  stdafx.h
TextAdventures/: README.md
TicTacToe/: CMakeLists.txt  README.md  TicTacToe.cpp  TicTacToe.vcxproj
(+6 files in other folders)
