cmake_minimum_required(VERSION 3.15)
project(AdventOfCode24 CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Build all days
add_subdirectory(Day1)
add_subdirectory(Day2)
add_subdirectory(Day3)
add_subdirectory(Day4)
add_subdirectory(Day5)
add_subdirectory(Day6)
add_subdirectory(Day7)
add_subdirectory(Day8)
add_subdirectory(Day9)
add_subdirectory(Day10)
add_subdirectory(Day11)
add_subdirectory(Day12)
add_subdirectory(Day13)
add_subdirectory(Day14)
add_subdirectory(Day15)
add_subdirectory(Day16)
add_subdirectory(Day17)
add_subdirectory(Day18)
add_subdirectory(Day19)
add_subdirectory(Day20)
add_subdirectory(Day21)
add_subdirectory(Day22)
add_subdirectory(Day23)
add_subdirectory(Day24)
add_subdirectory(Day25)