cmake_minimum_required(VERSION 3.15)
project(AdventOfCode25 CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Build all days
add_subdirectory(Day01)
add_subdirectory(Day02)
add_subdirectory(Day03)
add_subdirectory(Day04)
add_subdirectory(Day05)
add_subdirectory(Day06)
add_subdirectory(Day07)
add_subdirectory(Day08)
add_subdirectory(Day09)
add_subdirectory(Day10)
add_subdirectory(Day11)
add_subdirectory(Day12)